# AutoFileOrganizer

./: README.md  file_organizer.py  filesByDate.py  main.py  pyproject.toml  utils.py
